fix: update render.yaml configuration for static site deployment

--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,12 @@ services:
   - type: web
     name: iframe-squares-gateway
     runtime: static
-    buildCommand: npm install && npm run build
+    buildCommand: bun install && bun run build
     staticPublishPath: ./dist
     pullRequestPreviewsEnabled: true
     envVars:
-      - key: NODE_VERSION
-        value: 18.17.0
+      - key: BUN_VERSION
+        value: "1.0.15"
     headers:
       - path: /*
         name: Cache-Control
